tests/valid/io/v32_io_paren.f
program ioparen
  integer x
  x = 1
  read (*,*) x
  write (*,*) x
  print '(I5)', x
end
